--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,17 @@ pip
 setuptools
 pdbpp
 jupyter
+jupyterlab
 matplotlib
 torch
 torchvision
 pyro-ppl
 jupyter_http_over_ws
 pandas
-scipy 
+scipy
 trackpy
 tifffile
-scikit-image
+scikit-image==0.15.0
+joblib
+sklearn
+starfish==0.2.2
